k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: 969658552435.dkr.ecr.us-east-1.amazonaws.com/haruroute/backend:latest
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: "512Mi"
            requests:
              memory: "128Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: default
spec:
  selector:
    app: backend
  ports:
    - port: 8080
      targetPort: 8080
